# path_emergence_simulation

./: README.md  agent.py  cell.py  environment.py  main.py  model.py  pyproject.toml  run_grid_search.py  visualisation.py
utils/: GridSearch.py  data_collecting.py  entrances.py  images.py  log_scripts.py  step_metrics.py  terrains.py
utils/desired_paths_matrixes/: blackheath.npy  clapham.npy  doria_pamphil.npy  doria_pamphil_west.npy  greenwich.npy  hampstead.npy  hyde.npy  richmond.npy
utils/park_imgs/: colors.txt
